chore: add another floating layout app

--- a/home/.chezmoi.toml.tmpl
+++ b/home/.chezmoi.toml.tmpl
@@ -135,11 +135,12 @@ username = {{ onepasswordRead "op://Employee/gemsrc/username" $opWorkAccountCode
 secret = {{ onepasswordRead "op://Employee/gemsrc/credential" $opWorkAccountCode | quote }}
 region = {{ onepasswordRead "op://Employee/gemsrc/region" $opWorkAccountCode | quote }}
 endpoint = {{ onepasswordRead "op://Employee/gemsrc/endpoint" $opWorkAccountCode | quote }}
-{{- end }}
 
-{{- if $isWork }}
 [data.selfService]
 appId = {{ onepasswordRead "op://Employee/Self service application/appId" $opWorkAccountCode | quote }}
+
+[data.authService]
+appId = {{ onepasswordRead "op://Employee/Auth application/appId" $opWorkAccountCode | quote }}
 {{- end }}
 
 [data.posting]
