chore: adjust lazydocker and lazygit colors

--- a/home/dot_config/exact_lazygit/config.yml.tmpl
+++ b/home/dot_config/exact_lazygit/config.yml.tmpl
@@ -28,7 +28,6 @@ gui:
       - "#cdd6f4"
     searchingActiveBorderColor:
       - "#f9e2af"
-
   branchColorPatterns:
     # sdlc branches
     "^(main|master|dev|develop|staging|production)$": "#a6e3a1"
@@ -41,7 +40,7 @@ gui:
     # hotfix/revert branches
     "^(hotfix|refert)/": "#f38ba8"
     # chore/config branches
-    "^(chore|config|ci|docs)/": "#f5e0dc"
+    "^(chore|config|ci|build|docs)/": "#f5e0dc"
   authorColors:
     "Miszo Radomski": "#a6e3a1"
     "*": "#b4befe"
