--- a/home/dot_config/zsh/dot_zsh_work_env.zsh.tmpl
+++ b/home/dot_config/zsh/dot_zsh_work_env.zsh.tmpl
@@ -1,1 +1,4 @@
-{{- onepasswordRead "op://Employee/Envs/notesPlain" .op.work.accountCode -}}
+# vim: syntax=sh
+
+{{- onepasswordRead "op://Employee/Envs/notesPlain" .op.work.accountCode }}
+export GITLAB_API_TOKEN={{ .glab.token | quote }}
