--- a/home/dot_config/exact_lazygit/config.yml.tmpl
+++ b/home/dot_config/exact_lazygit/config.yml.tmpl
@@ -5,9 +5,9 @@ services:
   {{ .lazygit.work.serviceName | quote }}: {{ .lazygit.work.serviceValue | quote }}
 {{- end }}
 os:
-  edit: "open_in_nvim {{filename}}"
-  editAtLine: "open_in_nvim {{filename}} {{line}}"
-  shellFunctionsFile: {{ joinPath .chezmoi.homeDir ".config" "zsh" ".zsh_lazygit" | quote }}
+  edit: open_in_nvim {{"{{"}}filename{{"}}"}}
+  editAtLine: open_in_nvim {{"{{"}}filename{{"}}"}} {{"{{"}}line{{"}}"}}
+  shellFunctionsFile: {{ joinPath .chezmoi.homeDir ".config" "zsh" ".zsh_lazygit.zsh" }}
 gui:
   showFileIcons: true
   nerdFontsVersion: "3"
