chore: add missing changes to the configs

--- a/home/dot_config/zsh/dot_zsh_work_env.zsh.tmpl
+++ b/home/dot_config/zsh/dot_zsh_work_env.zsh.tmpl
@@ -1,4 +1,3 @@
 # vim: syntax=sh
-
-{{- onepasswordRead "op://Employee/Envs/notesPlain" .op.work.accountCode }}
+{{ onepasswordRead "op://Employee/Envs/notesPlain" .op.work.accountCode }}
 export GITLAB_API_TOKEN={{ .glab.token | quote }}
