--- a/home/dot_config/zsh/dot_zshrc.tmpl
+++ b/home/dot_config/zsh/dot_zshrc.tmpl
@@ -108,6 +108,7 @@ load_zsh_config credentials
 load_zsh_config env
 load_zsh_config functions
 load_zsh_config aliases
+load_zsh_config lazygit
 
 {{ if .computer.isWork -}}
 load_zsh_config work_env
