chore: add the ssh key item name

--- a/home/dot_config/1Password/ssh/agent.toml.tmpl
+++ b/home/dot_config/1Password/ssh/agent.toml.tmpl
@@ -1,9 +1,11 @@
 [[ssh-keys]]
+item = "Git SSH key"
 account = {{ .op.personal.accountName | quote }}
 vault = {{ .op.personal.vaultName | quote }}
 
 {{ if .computer.isWork -}}
 [[ssh-keys]]
+item = "Git SSH key"
 account = {{ .op.work.accountName | quote }}
 vault = {{ .op.work.vaultName | quote }}
 {{ end -}}
