chore: rename homelab servers

--- a/home/.chezmoi.toml.tmpl
+++ b/home/.chezmoi.toml.tmpl
@@ -108,17 +108,17 @@ itemId = {{ (onepassword "GitLab CLI token" $opWorkVaultName $opWorkAccountCode)
 token = {{ onepasswordRead "op://Employee/GitLab CLI token/token" $opWorkAccountCode | quote }}
 {{- end }}
 
-[data.ssh.homelab_01]
-host = {{ onepasswordRead "op://dev/Homelab_01 SSH key/Host" $opPersonalAccountCode | quote }}
-hostName = {{ onepasswordRead "op://dev/Homelab_01 SSH key/HostName" $opPersonalAccountCode | quote }}
-user = {{ onepasswordRead "op://dev/Homelab_01 SSH key/User" $opPersonalAccountCode | quote }}
-publicKey = {{ onepasswordRead "op://dev/Homelab_01 SSH key/public key" $opPersonalAccountCode | quote }}
+[data.ssh.homelab01]
+host = {{ onepasswordRead "op://dev/Homelab01 SSH key/Host" $opPersonalAccountCode | quote }}
+hostName = {{ onepasswordRead "op://dev/Homelab01 SSH key/HostName" $opPersonalAccountCode | quote }}
+user = {{ onepasswordRead "op://dev/Homelab01 SSH key/User" $opPersonalAccountCode | quote }}
+publicKey = {{ onepasswordRead "op://dev/Homelab01 SSH key/public key" $opPersonalAccountCode | quote }}
 
-[data.ssh.homelab_02]
-host = {{ onepasswordRead "op://dev/Homelab_02 SSH key/Host" $opPersonalAccountCode | quote }}
-hostName = {{ onepasswordRead "op://dev/Homelab_02 SSH key/HostName" $opPersonalAccountCode | quote }}
-user = {{ onepasswordRead "op://dev/Homelab_02 SSH key/User" $opPersonalAccountCode | quote }}
-publicKey = {{ onepasswordRead "op://dev/Homelab_02 SSH key/public key" $opPersonalAccountCode | quote }}
+[data.ssh.homelab02]
+host = {{ onepasswordRead "op://dev/Homelab02 SSH key/Host" $opPersonalAccountCode | quote }}
+hostName = {{ onepasswordRead "op://dev/Homelab02 SSH key/HostName" $opPersonalAccountCode | quote }}
+user = {{ onepasswordRead "op://dev/Homelab02 SSH key/User" $opPersonalAccountCode | quote }}
+publicKey = {{ onepasswordRead "op://dev/Homelab02 SSH key/public key" $opPersonalAccountCode | quote }}
 
 [data.ssh.unifi]
 host = {{ onepasswordRead "op://dev/Unifi SSH key/Host" $opPersonalAccountCode | quote }}
