--- a/home/private_dot_ssh/config.tmpl
+++ b/home/private_dot_ssh/config.tmpl
@@ -1,16 +1,18 @@
+Include /Users/miszo/.colima/ssh_config
+
 Host *
   IdentityAgent "~/.1password/agent.sock"
 
-Host {{ .ssh.homelab_01.host | trim }}
-  HostName {{ .ssh.homelab_01.hostName | trim }}
-  User {{ .ssh.homelab_01.user | trim }}
-  IdentityFile ~/.ssh/homelab_01.pub
+Host {{ .ssh.homelab01.host | trim }}
+  HostName {{ .ssh.homelab01.hostName | trim }}
+  User {{ .ssh.homelab01.user | trim }}
+  IdentityFile ~/.ssh/homelab01.pub
   IdentitiesOnly yes
 
-Host {{ .ssh.homelab_02.host | trim }}
-  HostName {{ .ssh.homelab_02.hostName | trim }}
-  User {{ .ssh.homelab_02.user | trim }}
-  IdentityFile ~/.ssh/homelab_02.pub
+Host {{ .ssh.homelab02.host | trim }}
+  HostName {{ .ssh.homelab02.hostName | trim }}
+  User {{ .ssh.homelab02.user | trim }}
+  IdentityFile ~/.ssh/homelab02.pub
   IdentitiesOnly yes
 
 Host {{ .ssh.unifi.host | trim }}
