--- a/home/exact_dot_tmuxifier/layouts/config.session.sh.tmpl
+++ b/home/exact_dot_tmuxifier/layouts/config.session.sh.tmpl
@@ -1,11 +1,11 @@
 # vim: syntax=sh
 # Set a custom session root path. Default is `$HOME`.
 # Must be called before `initialize_session`.
-session_root {{ joinPath .chezmoi.sourceDir ".." | quote }}
+session_root {{ joinPath .chezmoi.homeDir ".config" | quote }}
 
 # Create session with specified name if it does not already exist. If no
 # argument is given, session name will be based on layout file name.
-if initialize_session "dotfiles"; then
+if initialize_session ".config"; then
   new_window "editor"
   new_window "shell"
   select_window 1
