--- a/home/exact_dot_tmuxifier/layouts/config.session.sh.tmpl
+++ b/home/exact_dot_tmuxifier/layouts/config.session.sh.tmpl
@@ -5,7 +5,7 @@ session_root {{ joinPath .chezmoi.homeDir ".config" | quote }}
 
 # Create session with specified name if it does not already exist. If no
 # argument is given, session name will be based on layout file name.
-if initialize_session ".config"; then
+if initialize_session "config"; then
   new_window "editor"
   new_window "shell"
   select_window 1
