chore: add opencode completions

--- a/home/dot_config/zsh/dot_zshrc.tmpl
+++ b/home/dot_config/zsh/dot_zshrc.tmpl
@@ -58,6 +58,7 @@ zinit snippet OMZP::rails
 zinit snippet "$ZDOTDIR/plugins/chezmoi.zsh"
 zinit snippet "$ZDOTDIR/plugins/gh.zsh"
 zinit snippet "$ZDOTDIR/plugins/op.zsh"
+zinit snippet "$ZDOTDIR/plugins/opencode.zsh"
 zinit snippet "$ZDOTDIR/plugins/pnpm.zsh"
 
 # Keybindings
