chore: update lazygit pagers

--- a/home/dot_config/exact_lazygit/config.yml.tmpl
+++ b/home/dot_config/exact_lazygit/config.yml.tmpl
@@ -5,9 +5,9 @@ services:
   {{ .lazygit.work.serviceName | quote }}: {{ .lazygit.work.serviceValue | quote }}
 {{- end }}
 git:
-  paging:
-    colorArg: always
-    pager: delta --dark --paging=never --line-numbers --hyperlinks --hyperlinks-file-link-format="lazygit-edit://{path}:{line}"
+  pagers:
+    - colorArg: always
+      pager: delta --dark --paging=never --line-numbers --hyperlinks --hyperlinks-file-link-format="lazygit-edit://{path}:{line}"
 os:
   edit: open_in_nvim {{"{{"}}filename{{"}}"}}
   editAtLine: open_in_nvim {{"{{"}}filename{{"}}"}} {{"{{"}}line{{"}}"}}
