chore: make brew upgrades greedy

--- a/home/dot_config/zsh/dot_zsh_functions.zsh.tmpl
+++ b/home/dot_config/zsh/dot_zsh_functions.zsh.tmpl
@@ -7,7 +7,7 @@ function brew_bundle() {
 
 function brew_update {
   brew update &&
-  brew upgrade &&
+  brew upgrade --greedy &&
   brew cleanup
 }
 
