--- a/home/dot_config/exact_glab-cli/private_config.yml.tmpl
+++ b/home/dot_config/exact_glab-cli/private_config.yml.tmpl
@@ -1,3 +1,4 @@
+# vim: syntax=yaml
 # What protocol to use when performing Git operations. Supported values: ssh, https.
 git_protocol: ssh
 # What editor glab should run when creating issues, merge requests, etc. This global config cannot be overridden by hostname.
@@ -11,7 +12,7 @@ check_update: true
 # Whether or not to display hyperlink escape characters when listing items like issues or merge requests. Set to TRUE to display hyperlinks in TTYs only. Force hyperlinks by setting FORCE_HYPERLINKS=1 as an environment variable.
 display_hyperlinks: false
 # Default GitLab hostname to use.
-host: gitlab.com
+host: {{ .glab.apiHost | trim }}
 # Set to true (1) to disable prompts, or false (0) to enable them.
 no_prompt: false
 # Configuration specific for GitLab instances.
