chore: add ssh users for host definitions

--- a/home/.chezmoi.toml.tmpl
+++ b/home/.chezmoi.toml.tmpl
@@ -114,26 +114,31 @@ apiHost = {{ onepasswordRead "op://Employee/GitLab CLI token/api host" $opWorkAc
 host = {{ onepasswordRead "op://dev/GitHub SSH key/Host" $opPersonalAccountCode | quote }}
 identityFileContent = {{ onepasswordRead "op://dev/GitHub SSH key/public key" $opPersonalAccountCode | quote }}
 
+{{- if $isWork }}
+[data.ssh.gitlab]
+host = {{ onepasswordRead "op://Employee/GitLab SSH key/Host" $opWorkAccountCode | quote }}
+identityFileContent = {{ onepasswordRead "op://Employee/GitLab SSH key/public key" $opWorkAccountCode | quote }}
+
+{{ else -}}
 [data.ssh.homelab01]
 host = {{ onepasswordRead "op://dev/Homelab01 SSH key/Host" $opPersonalAccountCode | quote }}
 hostName = {{ onepasswordRead "op://dev/Homelab01 SSH key/HostName" $opPersonalAccountCode | quote }}
+user = {{ onepasswordRead "op://dev/Homelab01 SSH key/User" $opPersonalAccountCode | quote }}
 identityFileContent = {{ onepasswordRead "op://dev/Homelab01 SSH key/public key" $opPersonalAccountCode | quote }}
 
 [data.ssh.homelab02]
 host = {{ onepasswordRead "op://dev/Homelab02 SSH key/Host" $opPersonalAccountCode | quote }}
 hostName = {{ onepasswordRead "op://dev/Homelab02 SSH key/HostName" $opPersonalAccountCode | quote }}
+user = {{ onepasswordRead "op://dev/Homelab02 SSH key/User" $opPersonalAccountCode | quote }}
 identityFileContent = {{ onepasswordRead "op://dev/Homelab02 SSH key/public key" $opPersonalAccountCode | quote }}
 
 [data.ssh.unifi]
 host = {{ onepasswordRead "op://dev/Unifi SSH key/Host" $opPersonalAccountCode | quote }}
 hostName = {{ onepasswordRead "op://dev/Unifi SSH key/HostName" $opPersonalAccountCode | quote }}
+user = {{ onepasswordRead "op://dev/Unifi SSH key/User" $opPersonalAccountCode | quote }}
 identityFileContent = {{ onepasswordRead "op://dev/Unifi SSH key/public key" $opPersonalAccountCode | quote }}
 
-{{- if $isWork }}
-[data.ssh.gitlab]
-host = {{ onepasswordRead "op://Employee/GitLab SSH key/Host" $opWorkAccountCode | quote }}
-identityFileContent = {{ onepasswordRead "op://Employee/GitLab SSH key/public key" $opWorkAccountCode | quote }}
-{{- end }}
+{{ end -}}
 
 [data.tealdeer]
 cacheDir = {{ joinPath .chezmoi.homeDir ".cache" "tealdeer" | quote }}
