chore: add git settings

--- a/home/dot_config/git/config.tmpl
+++ b/home/dot_config/git/config.tmpl
@@ -66,3 +66,7 @@
   program = "/Applications/1Password.app/Contents/MacOS/op-ssh-sign"
 [commit]
   gpgsign = true
+[diff]
+	algorithm = histogram
+[rerere]
+	enabled = true
